# skycode

./: AGENTS.md  Cargo.toml  README.md
examples/: input_test.rs
resources/: cat.xcf  dog.xcf  doll.xcf  fox.xcf
src/: main.rs  stylesheet.rs  textimage.rs
