[package]
name = "skycode"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version= "0.29.0", features = ["events"] }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
ratatui-core = "0.1.0"
ratatui-themes = "0.2.0"
tui-markdown = { git = "https://github.com/nwhitehead/tui-markdown.git" }
tui-textarea = { git = "https://github.com/nwhitehead/tui-textarea.git" }

[[example]]
name = "input_test"
